Prevent text wrapping after using nav

--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@ body {
 }
 
 .centered {
+  width: 90%;
   text-align: center;
 }
 
